# grab-site

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  LICENSE.ArchiveBot  Pipfile  README.md  TODO.md  dashboard.html  docker-compose.yml  dupespotter.py  entrypoint.sh  grab-site  grab-site.sh  gs-dump-urls  gs-server  ignoracle.py  plugin.py  pyproject.toml  server.py  setup.py  wpull  wpull_hooks.py
.github/workflows/: build.yaml  docker.yml
dashboard/: dashboard.html
db/ignore_patterns/: blogs.json  coppermine.json  facebook.json  forums.json  global.json  googleplus.json  imdb.json  internetcentrum.json  livejournal.json  mediawiki.json  nogravatar.json  pinterest.json  reddit.json  singletumblr.json  twitter.json  youtube.json
extra_docs/: custom_hooks_sample.py  ia-auto-upload.sh  pause_resume_grab_sites.sh
images/icons/: credits.txt
libgrabsite/: __init__.py  dashboard.html  dashboard_client.py  default_cookies.txt  dump_urls.py  dupes.py  dupespotter.py  ignoracle.py  main.py  patched-wpull  plugin.py  server.py  stress_test_lmdb.py  wpull_hooks.py  wpull_tweaks.py
libgrabsite/ignore_sets/: blogs  coppermine.json  facebook  facebook.json  forums  global  global.json  googleplus  imdb  internetcentrum  mediawiki  meetupeverywhere  meetupeverywhere.json  noonion  noonion.json  nosortedindex  nosortedindex.json  pinterest  pinterest.json  postnuke  reddit  reddit.json  singletumblr  singletumblr.json  twitter  twitter.json  xenforo  youtube  youtube.json
src/grab_site/: 404.html  default_cookies.txt  dump_urls.py  dupes.py  main.py  server.py  wpull_hooks.py  wpull_tweaks.py
src/grab_site/ignore_sets/: coppermine  imdb  mediawiki  nogravatar  reddit  singletumblr  twitter
tests/: offline-tests  online-tests
