[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{ email = "ivan@ludios.org", name = "Ivan Kozik" }]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Topic :: Internet :: WWW/HTTP",
]
dependencies = [
	"click>=6.3",
	"wpull @ https://github.com/ArchiveTeam/ludios_wpull/tarball/master#egg=wpull-3.0.9",
	"manhole>=1.0.0",
	"lmdb>=0.89",
	"autobahn>=0.12.1",
	"fb-re2>=1.0.6",
	"websockets>=6.0",
]
description = "The archivist's web crawler: WARC output, dashboard for all crawls, dynamic ignore patterns"
dynamic = ["version"]
name = "grab-site"
requires-python = ">=3"

[project.optional-dependencies]
chardet = ["cchardet>=1.0.0"]

[project.scripts]
grab-site = "grab_site.main:main"
gs-dump-urls = "grab_site.dump_urls:main"
gs-server = "grab_site.server:main"

[project.urls]
homepage = "https://ludios.org/grab-site"
