[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.2.2"]

[project]
authors = [{ email = "ivan@ludios.org", name = "Ivan Kozik" }]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Topic :: Internet :: WWW/HTTP",
]
dependencies = [
	"autobahn>=23.6.2",
	"click>=8.1.7",
	# TODO: https://github.com/facebook/pyre2/issues/24 fb-re2>=1.0.7
	"fb-re2 @ https://github.com/facebook/pyre2/tarball/refs/pull/25/merge#egg=fb-re2",
	"lmdb>=1.4.1",
	"manhole>=1.8.0",
	"websockets>=12.0",
	# TODO: https://github.com/ArchiveTeam/grab-site/issues/198 SQLAlchemy>=1.4
	# TODO: https://github.com/ArchiveTeam/wpull/issues/404 wpull>=2.0.1
	"wpull @ https://github.com/matthewcen/ludios_wpull/tarball/master#egg=wpull-3.0.9",
]
description = "The archivist's web crawler: WARC output, dashboard for all crawls, dynamic ignore patterns"
dynamic = ["version"]
name = "grab-site"
requires-python = ">=3.11"

[project.optional-dependencies]
chardet = [
	# TODO: https://github.com/python/cpython/issues/79315 python>=3.11
	# TODO: https://github.com/PyYoshi/cChardet/issues/81 cchardet>=2.1.7
	"faust-cchardet>=2.1.19",
]
psutil = ["psutil>=5.9.6"]

[project.scripts]
grab-site = "grab_site.main:main"
gs-dump-urls = "grab_site.dump_urls:main"
gs-server = "grab_site.server:main"

[project.urls]
homepage = "https://ludios.org/grab-site"
